--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,11 @@
 node_modules
 build
 .vscode
-.idea
+.idea/workspace.xml
+.idea/usage.statistics.xml
+.idea/tasks.xml
+/node_modules
+/cmake-build-debug
+/cmake-build-debug-pi
+/cmake-build-release
+build/
