--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "@augmentality/node-alsa",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "capture alsa pcm packages",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "node-gyp rebuild"
+    "configure": "ncmake configure",
+    "build": "ncmake build",
+    "build-ts": "tsc",
+    "install": "ncmake configure && ncmake build"
   },
   "dependencies": {
     "@caspertech/node-cmake": "^2.5.1",
     "eventemitter3": "^3.0.1",
-    "nan": "^2.8.0"
+    "nan": "^2.8.0",
+    "typescript": "^3.3.3333"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/eventemitter3": "^2.0.2",
+    "@types/node": "^11.11.3"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/meldron/node-alsa-capture.git"
